feat: video uploading via interface
